--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="/js/jquery-1.11.1.min.js" type="text/javascript"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<title>Infocalypse</title>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- added 1.4.3 jquery -->
+
+<title>Deskside Assistant</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
 <!-- 
@@ -144,20 +145,21 @@
 </div> -->
 
 <div id="floor2map">
-<img src="/image/maps/floor2.png">
+<img src="image/maps/floor2.png">
 </div>
 
 <div id="floor3map">
-<img src="/image/maps/floor3.png">
+<img src="image/maps/floor3.png">
 </div>
 
 <div id="floor4map">
-<img src="/image/maps/floor4.png">
+<img src="image/maps/floor4.png">
 </div>
 
 
 
-<script src="/js/jquery.js" type="text/javascript"></script>
+<script src="js/jquery.js" type="text/javascript"></script>
+
 
 </body>
 </html>
